/*
Copyright 2024 Derrick J Wippler

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

option go_package = "github.com/kapetan-io/querator/proto";
import "google/protobuf/timestamp.proto";

package querator;

message StorageQueueListRequest {
  string queueName = 1 [json_name = "queue_name"];
  string pivot  = 2;
  int32 limit = 3;
}

message StorageQueueListResponse {
  repeated StorageQueueItem items = 1;
}

message StorageQueueAddRequest {
  string queueName = 1 [json_name = "queue_name"];
  repeated StorageQueueItem items = 2;
}

message StorageQueueAddResponse {
  repeated StorageQueueItem items = 2;
}

message StorageQueueDeleteRequest {
  string queueName = 1 [json_name = "queue_name"];
  repeated string ids = 2;
}

// StorageItem maps directly to the internal.types.Item and allows users to inspect items in storage
message StorageQueueItem {
  string id = 1;
  bool isReserved = 2  [json_name = "is_reserved"];
  google.protobuf.Timestamp reserveDeadline = 3 [json_name = "reserve_deadline"];
  google.protobuf.Timestamp deadDeadline = 4 [json_name = "dead_deadline"];
  google.protobuf.Timestamp createdAt = 5 [json_name = "created_at"];
  int32 attempts = 6;
  int32 maxAttempts = 7 [json_name = "max_attempts"];
  string reference = 8;
  string encoding = 9;
  string kind = 10;
  bytes payload = 11;
}
